--- a/설명.md
+++ b/설명.md
@@ -76,3 +76,4 @@ FertillizerUsage, FertillizerCost, CO2Usage, CO2Cost, MistUsageTime, Mist Cost, 
 <b>*테스트 폴더의 테스트 코드</b>
 
 -> 단순하게 최대 수확량을 종속변수로 놓고 전처리를 간단하게 함. 문제가 제시한 '16주 동안 단위면적당' 의 조건은 일단 제외함. 전처리 방식 2가지 버전의 코드.
+   이용한 데이터는 김진만 선배님이 올려주신 데이터.
