--- a/테스트/김은채_모델별_테스트1(원_핫_인코딩).ipynb
+++ b/테스트/김은채_모델별_테스트1(원_핫_인코딩).ipynb
@@ -87,7 +87,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "#원-핫 인코딩\n",
@@ -141,7 +141,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "#원-핫 인코딩\n",
@@ -214,7 +214,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "#원-핫 인코딩\n",
@@ -284,7 +284,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "#원-핫 인코딩\n",
