--- a/테스트/김은채_모델별_테스트2(그룹화).ipynb
+++ b/테스트/김은채_모델별_테스트2(그룹화).ipynb
@@ -72,7 +72,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "# 데이터 전처리\n",
@@ -152,7 +152,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "# 데이터 전처리\n",
@@ -232,7 +232,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "# 데이터 전처리\n",
@@ -312,7 +312,7 @@
         "import chardet\n",
         "\n",
         "# 데이터 로드\n",
-        "file_path = '/content/dataset2.csv'\n",
+        "file_path = 'dataset.csv'\n",
         "data = pd.read_csv(file_path)\n",
         "\n",
         "# 데이터 전처리\n",
