--- a/설명.md
+++ b/설명.md
@@ -62,10 +62,11 @@ https://github.com/kimbap918/2023-smart-farm-AI
 	
 <b>*작년 해커톤 문제 데이터 컬럼별 설명</b>
 
-frmDist, date, inTp, inHd, otmsuplyqy, acSlrdQy, cunt, ph, outTp, outWs, daysuplyqy, inCo2, ec, frmYear, frmWeek,
-frtstGrupp, lefstalklt, frtstSetCo, pllnLt, flanGrupp, frtstCo, flanJnt, tcdmt, frmhsFclu, hvstGrupp, hvstJnt, grwtLt,
-fcluHg, lefLt, flwrCo, hvstCo, lefCunt, frtstJnt, lefBt, stemThck, frmAr, frmDov, outtrn_cumsum, WaterUsage, WaterCost,
-FertillizerUsage, FertillizerCost, CO2Usage, CO2Cost, MistUsageTime, Mist Cost, HeatingEnergyUsage_cumsum
+
+|농가구역|날짜|내부온도|외부온도|내부습도|내부Co2|풍속|누적 일사량|급액 EC|급액 PH|일 급액횟수|일 급액량(CC/1주수)|1회 급액량(CC/1주수)|연도|주차|월|생장길이|초장|옆수|옆장|옆폭|엽병장|관부직경|화방높이|줄기 굵기|개화화방|개화군|착과군|수확군|개화마디|착과마디|수확마디|꽃개수|착과수|수확수|열매수|면적|재식밀도|누적 생산량|물 사용량|물 사용 비용|비료 사용량|비료 사용 비용|CO2사용량|CO2사용비용|미스트 사용시간|미스트 사용비용|누적 난방 에너지 사용량|
+|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|----------|
+|frmDist|date|inTp|inHd| otmsuplyqy|acSlrdQy|cunt|ph|outTp|outWs|daysuplyqy|inCo2|ec|frmYear|frmWeek|frtstGrupp|lefstalklt|frtstSetCo|pllnLt|flanGrupp|frtstCo|flanJnt|tcdmt|frmhsFclu|hvstGrupp|hvstJnt|grwtLt|fcluHg|lefLt|flwrCo|hvstCo|lefCunt|frtstJnt|lefBt|stemThck|frmAr|frmDov|outtrn_cumsum|WaterUsage|WaterCost|FertillizerUsage|FertillizerCost|CO2Usage|CO2Cost|MistUsageTime|Mist Cost|HeatingEnergyUsage_cumsum|
+
 
 
 농가구역, 날짜, 내부온도, 외부온도, 내부습도, 내부Co2, 풍속, 누적 일사량, 급액 EC, 급액 PH, 일 급액횟수, 일 급액량(CC/1주수), 1회 급액량(CC/1주수), 연도, 주차,
